@@ -1,3 +1,8 @@
+2006-12-18  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionReader.cs:
+		Fix a bug in reading MemberRef pointing to MethodDef.
+
 2006-12-16  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/StructureReader.cs:
